mdapi/Custom/objects/Renewal__c.object
<CustomObject>
    <description>For Data Loads, match on the HMYref field (preferable) or the Case Safe ID field.  This is part of the planned PM deployment.  Tracks key workflow related to the renewal process.</description>
    <fields>
        <fullName>Acquired_Leases__c</fullName>
        <formula>IF( TIP_Formula__c = &quot;Acquired Lease&quot;, 1,0)</formula>
        <label>Acquired Leases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <formula>Portfolio__r.Acquisition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Lease_Amount_from_Yardi__c</fullName>
        <formula>Lease__r.Residence__r.Most_Recent_Yardi_Rent_Roll__r.Actual_Lease_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Lease Amount from Yardi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Move_Out_Date__c</fullName>
        <label>Actual Move-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to trigger the email to the Coordinator to alert them they have been assigned a renewal for processing.</inlineHelpText>
        <label>Alert Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Inspection</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Property_Walk__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Annual Inspection</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Property_Walk__c</referenceTo>
        <relationshipLabel>Renewals</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Sent_to_Resident__c</fullName>
        <label>App Sent to Resident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Needed__c</fullName>
        <label>Application Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Full App Required</fullName>
                </value>
                <value>
                    <fullName>Background Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Data__c</fullName>
        <formula>Lease__r.Bad_Data__c</formula>
        <label>Bad Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_CMA_Decision_Tree_Status__c</fullName>
        <label>Bulk CMA Decision Tree Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(10%)  AVM vs CMA</fullName>
                </value>
                <value>
                    <fullName>(10%) AVM vs PL</fullName>
                </value>
                <value>
                    <fullName>(10%) CMA vs AVM</fullName>
                </value>
                <value>
                    <fullName>(10%) CMA vs PL</fullName>
                </value>
                <value>
                    <fullName>(5%) AVM vs CMA</fullName>
                </value>
                <value>
                    <fullName>(5%) AVM vs PL</fullName>
                </value>
                <value>
                    <fullName>(5%) CMA vs AVM</fullName>
                </value>
                <value>
                    <fullName>(5%) CMA vs PL</fullName>
                </value>
                <value>
                    <fullName>EXCEPTION</fullName>
                </value>
                <value>
                    <fullName>10% - AVM vs CMA</fullName>
                    <isActive>false</isActive>
                    <label>10% - AVM vs CMA</label>
                </value>
                <value>
                    <fullName>10% - AVM vs PL</fullName>
                    <isActive>false</isActive>
                    <label>10% - AVM vs PL</label>
                </value>
                <value>
                    <fullName>10% - CMA vs PL</fullName>
                    <isActive>false</isActive>
                    <label>10% - CMA vs PL</label>
                </value>
                <value>
                    <fullName>5% - CMA vs PL</fullName>
                    <isActive>false</isActive>
                    <label>5% - CMA vs PL</label>
                </value>
                <value>
                    <fullName>5% AVM vs CMA</fullName>
                    <isActive>false</isActive>
                    <label>5% AVM vs CMA</label>
                </value>
                <value>
                    <fullName>5% AVM vs PL</fullName>
                    <isActive>false</isActive>
                    <label>5% AVM vs PL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Post_Decision_CMA_Rent__c</fullName>
        <label>Bulk Post-Decision CMA Rent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Pre_Decision_CMA_Rent__c</fullName>
        <label>Bulk Pre-Decision CMA Rent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Pricing_Rent_Driver__c</fullName>
        <label>Bulk Pricing Rent Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RENT GROWTH</fullName>
                </value>
                <value>
                    <fullName>CMA RENT</fullName>
                </value>
                <value>
                    <fullName>EXCEPTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Rent_Alert__c</fullName>
        <formula>if((( New_Rent__c /(CMA_Rent__c * 1.02))-1)*100 &gt; 10, &apos;YES&apos;,&apos;NO&apos;)</formula>
        <label>Bulk Rent Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Subject_AVM_Rent__c</fullName>
        <label>Bulk Subject AVM Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C1_Address__c</fullName>
        <label>C1 Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_Adjusted_PSF_Rate__c</fullName>
        <label>C1 Adjusted PSF Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_BA__c</fullName>
        <label>C1 BA</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_BR__c</fullName>
        <label>C1 BR</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_Circuit_Breaker_s_Trigger__c</fullName>
        <label>C1 Circuit Breaker(s) Trigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQFT</fullName>
                </value>
                <value>
                    <fullName>BATH</fullName>
                </value>
                <value>
                    <fullName>BEDROOMS</fullName>
                </value>
                <value>
                    <fullName>RADIUS</fullName>
                </value>
                <value>
                    <fullName>LIST DATE</fullName>
                </value>
                <value>
                    <fullName>DOM</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C1_DOM__c</fullName>
        <label>C1 DOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_Distance__c</fullName>
        <label>C1 Distance</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_List_Date__c</fullName>
        <label>C1 List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C1_Price__c</fullName>
        <label>C1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C1_SQFT__c</fullName>
        <label>C1 SQFT</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_Selected_Not_Selected__c</fullName>
        <label>C1 Selected/Not Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C1_State__c</fullName>
        <label>C1 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_Unadjusted_PSF_Rate__c</fullName>
        <label>C1 Unadjusted PSF Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1_Zip__c</fullName>
        <label>C1 Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Address__c</fullName>
        <label>C2 Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Adjusted_PSF_Rate__c</fullName>
        <label>C2 Adjusted PSF Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_BA__c</fullName>
        <label>C2 BA</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_BR__c</fullName>
        <label>C2 BR</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Circuit_Breaker_s_Trigger__c</fullName>
        <label>C2 Circuit Breaker(s) Trigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQFT</fullName>
                </value>
                <value>
                    <fullName>BATH</fullName>
                </value>
                <value>
                    <fullName>BEDROOMS</fullName>
                </value>
                <value>
                    <fullName>RADIUS</fullName>
                </value>
                <value>
                    <fullName>LIST DATE</fullName>
                </value>
                <value>
                    <fullName>DOM</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C2_DOM__c</fullName>
        <label>C2 DOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Distance__c</fullName>
        <label>C2 Distance</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_List_Date__c</fullName>
        <label>C2 List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C2_Price__c</fullName>
        <label>C2 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C2_SQFT__c</fullName>
        <label>C2 SQFT</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Selected_Not_Selected__c</fullName>
        <label>C2 Selected/Not Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C2_State__c</fullName>
        <label>C2 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Unadjusted_PSF_Rate__c</fullName>
        <label>C2 Unadjusted PSF Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_Zip__c</fullName>
        <label>C2 Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Address__c</fullName>
        <label>C3 Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Adjusted_PSF_Rate__c</fullName>
        <label>C3 Adjusted PSF Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_BA__c</fullName>
        <label>C3 BA</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_BR__c</fullName>
        <label>C3 BR</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Circuit_Breaker_s_Trigger__c</fullName>
        <label>C3 Circuit Breaker(s) Trigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQFT</fullName>
                </value>
                <value>
                    <fullName>BATH</fullName>
                </value>
                <value>
                    <fullName>BEDROOMS</fullName>
                </value>
                <value>
                    <fullName>RADIUS</fullName>
                </value>
                <value>
                    <fullName>LIST DATE</fullName>
                </value>
                <value>
                    <fullName>DOM</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C3_DOM__c</fullName>
        <label>C3 DOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Distance__c</fullName>
        <label>C3 Distance</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_List_Date__c</fullName>
        <label>C3 List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C3_Price__c</fullName>
        <label>C3 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C3_SQFT__c</fullName>
        <label>C3 SQFT</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Selected_Not_Selected__c</fullName>
        <label>C3 Selected/Not Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C3_State__c</fullName>
        <label>C3 State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Unadjusted_PSF_Rate__c</fullName>
        <label>C3 Unadjusted PSF Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Zip__c</fullName>
        <label>C3 Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMA_Plus_Two_Percent__c</fullName>
        <formula>CMA_Rent__c * 1.02</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA + 2%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMA_Rent_Comments__c</fullName>
        <description>Formerly called Market Rent Comments.</description>
        <inlineHelpText>If the CMA Rent is not the same as the UW Rent, please provide details.</inlineHelpText>
        <label>CMA Rent Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMA_Rent__c</fullName>
        <description>Formerly called Market Rent.</description>
        <label>CMA Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_for_Coordinator__c</fullName>
        <label>Comments for Coordinator</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Lease_Term_Bucket__c</fullName>
        <formula>IF (Current_Lease_Term_Months__c &lt; 12, &quot;&lt; 12 Months&quot;,
 IF (Current_Lease_Term_Months__c = 12, &quot; 1 Yr Lease&quot;,
 IF (Current_Lease_Term_Months__c &gt; 12 &amp;&amp; Current_Lease_Term_Months__c &lt; 24, &quot;1 Yr Plus&quot;,
 IF (Current_Lease_Term_Months__c = 24, &quot;2 Yr Lease&quot;, 
 IF (Current_Lease_Term_Months__c &gt; 24, &quot;2 Yr Plus&quot;, NULL)))))</formula>
        <label>Current Lease Term Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lease_Term_Months__c</fullName>
        <formula>Lease__r.Lease_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Lease_Type__c</fullName>
        <formula>Text(Lease__r.Lease_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lease Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Month_Lease_End__c</fullName>
        <formula>IF(   Month_Lease_End_Date__c  =   Month_Today__c   , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month Lease End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Rent_Text__c</fullName>
        <label>Current Rent_Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Check_Port_IDs__c</fullName>
        <description>This field is used for data validation purposes to compare if the Portfolio ID of the Renewal is the same as the Portfolio ID on the Lease.</description>
        <formula>IF (Portfolio__r.Id =  Lease__r.Portfolio_ID__c, &quot;True&quot;, &quot;False&quot;)</formula>
        <label>Data Check - Port IDs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Validation_Notes__c</fullName>
        <label>Data Validation Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Comments_Last_Update__c</fullName>
        <label>Date/Time Comments Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Coordinator_Alert__c</fullName>
        <label>Date/Time Coordinator Alert</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Stamp__c</fullName>
        <label>Date/Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Lease_End_to_Renew_Start__c</fullName>
        <formula>Renewed_Lease_Start_Yardi__c - Lease__r.Lease_End_Date__c</formula>
        <label># Days Lease End to Renew Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Lease_Start_to_Move_In__c</fullName>
        <formula>Move_In_Date__c - Lease_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Lease Start to Move-In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Move_Out_to_Lease_End__c</fullName>
        <formula>Lease_End_Date__c - Move_Out_Date_from_Yardi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Move-Out to Lease End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Notice_to_Move_Out__c</fullName>
        <formula>Move_Out_Date_from_Yardi__c- Notice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Notice to Move-Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Lease_End__c</fullName>
        <formula>IF(ISPICKVAL( Renewal_Status__c, &quot;Month-to-Month&quot;),  Lease__r.Lease_End_Date__c - TODAY(),
IF(Lease__r.Lease_End_Date__c  &lt;  TODAY(),0, Lease__r.Days_to_Expiration__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days to Lease End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <formula>IF (Renewal_Status_Bucket__c = &quot;Not Eligible&quot;,0,1)</formula>
        <label>Eligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact_Notes__c</fullName>
        <label>90-120 Day Warm Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Contact_Notice_Due_Date__c</fullName>
        <description>This field is populated via workflow.</description>
        <inlineHelpText>120 days from Lease End Date.</inlineHelpText>
        <label>90-120 Day Warm Call Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Contact_Notice_Sent__c</fullName>
        <label>90-120 Day Warm Call Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_Contact_Due_Date__c</fullName>
        <description>This field is populated via workflow.</description>
        <inlineHelpText>30 days from Lease End Date.</inlineHelpText>
        <label>30 Days Prior to Exp Letter &amp; Call Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_Contact_Notes__c</fullName>
        <label>30 Days Prior to Exp Letter &amp; Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Contact_Notice_Sent__c</fullName>
        <label>30 Days Prior to Exp Letter &amp; Call Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_MTM_Fee__c</fullName>
        <formula>IF ( MTM_Fee_Per_Yardi__c  &lt;=0, &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has MTM Fee?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Maintenance_Comments__c</fullName>
        <label>Home Maintenance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Maintenance_Quality__c</fullName>
        <label>Home Maintenance Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>Unacceptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Rent__c</fullName>
        <formula>Lease__r.Housing_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the amount paid by the Public Housing Authority.</inlineHelpText>
        <label>Housing Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IH_Leases__c</fullName>
        <formula>IF( TIP_Formula__c = &quot;IH Lease&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IH Leases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IH_Notice_to_Vacate_Sent__c</fullName>
        <label>IH Notice to Vacate Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IH_Property_Transfer__c</fullName>
        <inlineHelpText>Enter in the Yardi Code for the property the resident transferred to.</inlineHelpText>
        <label>IH Property Transfer (if applicable)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Proposed_New_Rent_Date__c</fullName>
        <description>Date on which first  Proposed New Rent get populated</description>
        <label>Initial Proposed New Rent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Proposed_New_Rent__c</fullName>
        <description>it hold first Proposed Rent which get populated and will retain same always</description>
        <label>Initial Proposed New Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Transfer_Location__c</fullName>
        <inlineHelpText>This field also exists on Rehab as a formula reflecting this field&apos;s value.</inlineHelpText>
        <label>Key Transfer Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LA_Uploaded_Renewal_Lease__c</fullName>
        <label>LA Uploaded Renewal Lease</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_T_Code__c</fullName>
        <formula>Lease__r.tCode_LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Last Name/T-Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Payments__c</fullName>
        <label># Late Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_New_Rent__c</fullName>
        <formula>IF( Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c  = 0,  New_Rent__c , Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest New Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Active__c</fullName>
        <formula>Lease__r.Yardi_Active_Lease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Documents_Completed__c</fullName>
        <label>Lease Documents Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_Change__c</fullName>
        <formula>Lease__r.Lease_End_Date_Change__c</formula>
        <label>Lease End Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_Prior_Value__c</fullName>
        <formula>Lease__r.Lease_End_Date_Prior_Value__c</formula>
        <label>Lease End Date Prior Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <formula>Lease__r.Lease_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Expires_After_August_2013__c</fullName>
        <formula>IF(Lease__r.Lease_End_Date__c &gt;= DATE(2013, 08, 01), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Expires After August 2013</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Renewal_Sent_Date__c</fullName>
        <label>Lease Renewal Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lease_Renewal_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Renewal Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Renewed_Last_Month__c</fullName>
        <formula>IF(AND(  Previous_Month_End_Date__c  = 1,  Lease_Renewed__c = 1), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Renewed - Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Renewed_Next_Month__c</fullName>
        <formula>IF(AND(  Next_Month_Lease_End__c  = 1,  Lease_Renewed__c = 1), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Renewed - Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Renewed_This_Month__c</fullName>
        <formula>IF(AND( Current_Month_Lease_End__c = 1,  Lease_Renewed__c = 1), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Renewed - This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Renewed__c</fullName>
        <formula>IF (ISPICKVAL(Renewal_Status__c, &quot;Lease Renewed&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Renewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Rent__c</fullName>
        <formula>Lease__r.Lease_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <formula>Lease__r.Lease_From_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <label>Desired Lease Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <label>Lease</label>
        <referenceTo>Tenant_Card__c</referenceTo>
        <relationshipLabel>Renewal Record</relationshipLabel>
        <relationshipName>Lease_Renewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Ledger_Balance__c</fullName>
        <label>Ledger Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ledger_Review_Comments__c</fullName>
        <label>Ledger Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Score__c</fullName>
        <formula>Portfolio__r.Location_Score__c</formula>
        <inlineHelpText>Score from 1 to 5 describing the geographic location of the asset, with 1 being the lowest and 5 being the highest</inlineHelpText>
        <label>Location Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>